--- a/arch/arm/dts/imx8mm-dwe.dts
+++ b/arch/arm/dts/imx8mm-dwe.dts
@@ -59,8 +59,8 @@
 
 	pinctrl_gpio_keys: gpio_keysgrp {
 		fsl,pins = <
-#define GP_GPIOKEY_POWER_FAIL	<&gpio1 3 GPIO_ACTIVE_LOW>
-			MX8MMN(IOMUXC_GPIO1_IO03_GPIO1_IO3, 0x140)
+#define GP_GPIOKEY_POWER_FAIL	<&gpio1 3 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_GPIO1_IO03_GPIO1_IO3, 0x00)
 		>;
 	};
 
@@ -96,18 +96,6 @@
 			MX8MMN(IOMUXC_SAI2_MCLK_GPIO4_IO27, 0x1c0)	/* pin 42: BT_UART_WH */
 			MX8MMN(IOMUXC_SAI3_RXC_GPIO4_IO29, 0x1c0)	/* pin 38, CLK_REQ_OUT */
 
-			/* EC21-ALCC USB modem */
-			MX8MMN(IOMUXC_SAI1_MCLK_GPIO4_IO20, 0x1c0)	/* ET_NET_STAT */
-			MX8MMN(IOMUXC_SAI1_TXFS_GPIO4_IO10, 0x1c0)	/* ET_NET_MODE */
-			MX8MMN(IOMUXC_SAI1_TXC_GPIO4_IO11, 0x1c0)	/* ET_ON_OFF */
-			MX8MMN(IOMUXC_SAI1_TXD0_GPIO4_IO12, 0x1c0)	/* ET_USIM_DETECT */
-			MX8MMN(IOMUXC_SAI1_TXD1_GPIO4_IO13, 0x1c0)	/* ET_RESET_N */
-			MX8MMN(IOMUXC_SAI1_TXD2_GPIO4_IO14, 0x1c0)	/* ET_WAKE_UP */
-			MX8MMN(IOMUXC_SAI1_TXD3_GPIO4_IO15, 0x1c0)	/* ET_USB_BOOT */
-			MX8MMN(IOMUXC_SAI1_TXD4_GPIO4_IO16, 0x1c0)	/* ET_RI */
-			MX8MMN(IOMUXC_SAI1_TXD5_GPIO4_IO17, 0x1c0)	/* ET_AP_READY */
-			MX8MMN(IOMUXC_SAI1_RXFS_GPIO4_IO0, 0x1c0)	/* ET_STAT */
-
 			/* test points */
 			MX8MMN(IOMUXC_SD2_WP_GPIO2_IO20	, 0x1c0)	/* tp2 */
 			MX8MMN(IOMUXC_SD2_RESET_B_GPIO2_IO19, 0x1c0)	/* tp7 */
@@ -130,9 +118,9 @@
 
 	pinctrl_i2c1_1: i2c1_1grp {
 		fsl,pins = <
-#define GP_I2C1_SCL	<&gpio5 14 GPIO_ACTIVE_HIGH>
+#define GP_I2C1_SCL	<&gpio5 14 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C1_SCL_GPIO5_IO14, 0x400001c3)
-#define GP_I2C1_SDA	<&gpio5 15 GPIO_ACTIVE_HIGH>
+#define GP_I2C1_SDA	<&gpio5 15 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C1_SDA_GPIO5_IO15, 0x400001c3)
 		>;
 	};
@@ -155,9 +143,9 @@
 
 	pinctrl_i2c2_1: i2c2_1grp {
 		fsl,pins = <
-#define GP_I2C2_SCL	<&gpio5 16 GPIO_ACTIVE_HIGH>
+#define GP_I2C2_SCL	<&gpio5 16 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C2_SCL_GPIO5_IO16, 0x400001c3)
-#define GP_I2C2_SDA	<&gpio5 17 GPIO_ACTIVE_HIGH>
+#define GP_I2C2_SDA	<&gpio5 17 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C2_SDA_GPIO5_IO17, 0x400001c3)
 		>;
 	};
@@ -182,9 +170,9 @@
 
 	pinctrl_i2c3_1: i2c3_1grp {
 		fsl,pins = <
-#define GP_I2C3_SCL	<&gpio5 18 GPIO_ACTIVE_HIGH>
+#define GP_I2C3_SCL	<&gpio5 18 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C3_SCL_GPIO5_IO18, 0x400001c3)
-#define GP_I2C3_SDA	<&gpio5 19 GPIO_ACTIVE_HIGH>
+#define GP_I2C3_SDA	<&gpio5 19 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C3_SDA_GPIO5_IO19, 0x400001c3)
 		>;
 	};
@@ -199,9 +187,9 @@
 
 	pinctrl_i2c4_1: i2c4_1grp {
 		fsl,pins = <
-#define GP_I2C4_SCL	<&gpio5 20 GPIO_ACTIVE_HIGH>
+#define GP_I2C4_SCL	<&gpio5 20 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C4_SCL_GPIO5_IO20, 0x400001c3)
-#define GP_I2C4_SDA	<&gpio5 21 GPIO_ACTIVE_HIGH>
+#define GP_I2C4_SDA	<&gpio5 21 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C4_SDA_GPIO5_IO21, 0x400001c3)
 		>;
 	};
@@ -282,7 +270,7 @@
 	pinctrl_usbotg1: usbotg1grp {
 		fsl,pins = <
 			MX8MMN(IOMUXC_GPIO1_IO12_USB1_OTG_PWR, 0x16)
-			MX8MMN(IOMUXC_GPIO1_IO13_USB1_OTG_OC, 0x16)
+			MX8MMN(IOMUXC_GPIO1_IO13_USB1_OTG_OC, 0x156)
 		>;
 	};
 
@@ -416,9 +404,35 @@
 		>;
 	};
 
+	pinctrl_wwan_rfkill: wwan-rfkillgrp {
+		fsl,pins = <
+			/* EC21 - Modem pins */
+#define GP_EC21_RESET		<&gpio4 13 (GPIO_OPEN_DRAIN | GPIO_ACTIVE_LOW)>
+			MX8MMN(IOMUXC_SAI1_TXD1_GPIO4_IO13, 0x140)	/* ET_RESET_N */
+#define GP_EC21_USB_BOOT	<&gpio4 15 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXD3_GPIO4_IO15, 0x100)	/* ET_USB_BOOT */
+#define GP_EC21_POWER_KEY	<&gpio4 11 GPIO_OPEN_DRAIN>
+			MX8MMN(IOMUXC_SAI1_TXC_GPIO4_IO11, 0x140)	/* ET_ON_OFF */
+#define GP_EC21_USIM_DETECT	<&gpio4 12 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_TXD0_GPIO4_IO12, 0x100)	/* ET_USIM_DETECT */
+#define GP_EC21_WAKE_UP		<&gpio4 14 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_TXD2_GPIO4_IO14, 0x100)	/* ET_WAKE_UP */
+#define GP_EC21_AP_READY	<&gpio4 17 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_TXD5_GPIO4_IO17, 0x100)	/* ET_AP_READY */
+#define GP_EC21_ACTIVE_STATUS	<&gpio4 0 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_RXFS_GPIO4_IO0, 0x1c0)	/* ET_STAT */
+#define GP_EC21_NET_STAT	<&gpio4 20 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_MCLK_GPIO4_IO20, 0x80)	/* ET_NET_STAT */
+#define GP_EC21_NET_MODE	<&gpio4 10 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXFS_GPIO4_IO10, 0x80)	/* ET_NET_MODE */
+#define GP_EC21_RI		<&gpio4 16 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXD4_GPIO4_IO16, 0x80)	/* ET_RI */
+		>;
+	};
+
 	pinctrl_zwave: zwavegrp {
 		fsl,pins = <
-#define GP_ZWAVE_RESET		<&gpio4 30 GPIO_ACTIVE_LOW>
+#define GP_ZWAVE_RESET		<&gpio4 30 GPIO_ACTIVE_HIGH>
 			MX8MMN(IOMUXC_SAI3_RXD_GPIO4_IO30, 0x100)
 		>;
 	};
@@ -451,7 +465,7 @@
 		power-fail {
 			label = "Power failure";
 			gpios = GP_GPIOKEY_POWER_FAIL;
-			linux,code = <KEY_POWER>;
+			linux,code = <KEY_STOP>;
 			gpio-key,wakeup;
 		};
 	};
@@ -516,6 +530,12 @@
 		};
 	};
 
+	pcie0_refclk: pcie0-refclk {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <100000000>;
+	};
+
 	reg_usdhc2_vqmmc: regulator-usdhc2-vqmmc {
 		compatible = "regulator-gpio";
 		pinctrl-names = "default";
@@ -545,6 +565,18 @@
 		regulator-max-microvolt = <3300000>;
 	};
 
+	reg_vref_3v7: regulator-vref-3v7 {
+		compatible = "regulator-fixed";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_reg_3p7v>;
+		regulator-name = "ec21_3v7";
+		regulator-min-microvolt = <3700000>;
+		regulator-max-microvolt = <3700000>;
+		startup-delay-us = <60000>;
+		gpio = GP_REG_3P7V;
+		enable-active-high;
+	};
+
 	reg_wlan_vmmc: regulator-wlan-vmmc {
 		compatible = "regulator-fixed";
 		pinctrl-names = "default";
@@ -556,11 +588,36 @@
 		startup-delay-us = <70000>;
 		enable-active-high;
 	};
+
+	wwan_rfkill: wwan-rfkill {
+#if 0
+		/* power-key is not connected, so don't use status */
+		active-status-gpios = GP_EC21_ACTIVE_STATUS;
+#endif
+		compatible = "net,rfkill-gpio";
+#if 1
+		low-gpios = GP_EC21_USB_BOOT;
+		high-gpios = GP_EC21_USIM_DETECT,GP_EC21_WAKE_UP,GP_EC21_AP_READY;
+#else
+		high-gpios = GP_EC21_USB_BOOT,GP_EC21_USIM_DETECT,GP_EC21_WAKE_UP,GP_EC21_AP_READY;
+#endif
+		name = "wwan-rfkill";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_wwan_rfkill>;
+		power-key-low-off = <700>;
+		power-key-low-on = <550>;
+		power-key-gpios = GP_EC21_POWER_KEY;
+		reset-gpios = GP_EC21_RESET;
+		status = "okay";
+		type = <5>;     /* WWAN */
+		vdd-supply = <&reg_vref_3v7>;
+		wakeup-dev = <&usbotg2>;
+	};
 };
 
 #if 0
 &A53_0 {
-	arm-supply = <&reg_sw3>;
+	cpu-supply = <&reg_sw3>;
 };
 
 &ecspi2 {
@@ -622,7 +679,7 @@
 	status = "okay";
 
 #if 0
-	pf8100@08 {
+	pf8100@8 {
 		compatible = "nxp,pf8x00";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i2c1_pf8100>;
@@ -768,18 +825,36 @@
 };
 
 &pcie0 {
+	assigned-clocks = <&clk IMX8MM_CLK_PCIE1_AUX>,
+			  <&clk IMX8MM_CLK_PCIE1_PHY>,
+			  <&clk IMX8MM_CLK_PCIE1_CTRL>;
+	assigned-clock-rates = <10000000>, <100000000>, <250000000>;
+	assigned-clock-parents = <&clk IMX8MM_SYS_PLL2_50M>,
+				 <&clk IMX8MM_SYS_PLL2_100M>,
+				 <&clk IMX8MM_SYS_PLL2_250M>;
+	clocks = <&clk IMX8MM_CLK_PCIE1_ROOT>,
+		 <&clk IMX8MM_CLK_PCIE1_AUX>,
+		 <&clk IMX8MM_CLK_PCIE1_PHY>,
+		 <&pcie0_refclk>;
+	clock-names = "pcie", "pcie_aux", "pcie_phy", "pcie_bus";
+	disable-gpio = GP_PCIE0_DISABLE;
+	ext_osc = <0>;
+	l1ss-disabled;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcie0>;
-	disable-gpio = GP_PCIE0_DISABLE;
 	reset-gpio = GP_PCIE0_RESET;
-	ext_osc = <0>;
 	status = "okay";
 };
 
 &resmem {
-	limit3g@0x100000000 {
-		no-map;
-		reg = <1 0x00000000 0 0x40000000>;
+
+	/* global autoconfigured region for contiguous allocations */
+	linux,cma {
+		compatible = "shared-dma-pool";
+		reusable;
+		size = <0 0x10000000>;
+		alloc-ranges = <0 0x40000000 0 0x60000000>;
+		linux,cma-default;
 	};
 };
 
@@ -794,7 +869,7 @@
 	pinctrl-0 = <&pinctrl_uart1>;
 	assigned-clocks = <&clk IMX8MMN(CLK_UART1)>;
 	assigned-clock-parents = <&clk IMX8MMN(SYS_PLL1_80M)>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 	status = "okay";
 };
 #endif
@@ -810,10 +885,14 @@
 #if 0
 &uart3 { /* J15 */
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart3>;
+	pinctrl-0 = <&pinctrl_uart3>, <&pinctrl_zwave>;
+	control-gpios = GP_ZWAVE_RESET;
+#define M_RESET		1
+	off_levels = <0>;
+	rs232_levels = <M_RESET>;
 	assigned-clocks = <&clk IMX8MMN(CLK_UART3)>;
 	assigned-clock-parents = <&clk IMX8MMN(SYS_PLL1_80M)>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
 	status = "okay";
 };
 
@@ -828,6 +907,7 @@
 
 &usbotg1 {
 	dr_mode = "otg";
+	over-current-active-low;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
 	power-active-high;
@@ -835,6 +915,7 @@
 };
 
 &usbotg2 {
+	autosuspend-delay-ms = <15000>;
 	dr_mode = "host";
 	over-current-active-low;
 	pinctrl-names = "default";
@@ -848,6 +929,7 @@
 	bus-width = <8>;
 	mmc-ddr-1_8v;
 	mmc-hs200-1_8v;
+	no-cqe;
 	no-mmc-hs400;
 	non-removable;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
@@ -881,6 +963,8 @@
 &usdhc3 {
 	bus-width = <4>;
 	no-sd-uhs-sdr104;
+	pm-ignore-notify;
+	keep-power-in-suspend;
 	non-removable;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc3>;
@@ -901,6 +985,11 @@
 
 &vpu_h1 {
 	status = "okay";
+};
+
+&vpumix_pd {
+	dvfs-supply = <&reg_sw5>;
+	idle-microvolt = <850000 805000 900000>;
 };
 #endif
 
