--- a/arch/arm/dts/imx8mmn-nitrogen8mm_tab.dtsi
+++ b/arch/arm/dts/imx8mmn-nitrogen8mm_tab.dtsi
@@ -37,16 +37,14 @@
 			MX8MMN(IOMUXC_SAI2_RXFS_GPIO4_IO21, 0x09)	/* pin 8, SDIO_INT_L */
 			MX8MMN(IOMUXC_SAI5_MCLK_GPIO3_IO25, 0x09)	/* pin 38, CLK_REQ_OUT */
 			MX8MMN(IOMUXC_SAI2_MCLK_GPIO4_IO27, 0x09)	/* pin 42, BT_UART_WH */
-		
-			MX8MMN(IOMUXC_GPIO1_IO10_GPIO1_IO10, 0x1c3)	/* Flash enable */
-			MX8MMN(IOMUXC_GPIO1_IO05_GPIO1_IO5, 0x1c3)	/* Flash torch mode */
-			MX8MMN(IOMUXC_GPIO1_IO08_GPIO1_IO8, 0x1c3)	/* NFC GPO */
+
 			MX8MMN(IOMUXC_SD1_STROBE_GPIO2_IO11, 0x09)	/* R160 */
 			MX8MMN(IOMUXC_SD2_RESET_B_GPIO2_IO19, 0x09)	/* TP8 */
 			MX8MMN(IOMUXC_SD2_WP_GPIO2_IO20, 0x09)		/* TP9 */
 			MX8MMN(IOMUXC_SAI2_RXC_GPIO4_IO22, 0x09)	/* TP13 */
 			MX8MMN(IOMUXC_GPIO1_IO11_GPIO1_IO11, 0x09)	/* TP18 */
 			MX8MMN(IOMUXC_SAI5_RXD0_GPIO3_IO21, 0x09)	/* TP19 */
+			MX8MMN(IOMUXC_SAI5_RXD1_GPIO3_IO22, 0x09)	/* TP31 */
 		>;
 	};
 
@@ -63,6 +61,17 @@
 			MX8MMN(IOMUXC_I2C1_SCL_GPIO5_IO14, 0x400001c3)
 #define GP_I2C1_SDA	<&gpio5 15 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C1_SDA_GPIO5_IO15, 0x400001c3)
+		>;
+	};
+
+	pinctrl_i2c1_max77975: i2c1-max77975grp {
+		fsl,pins = <
+#define GPIRQ_MAX77975	<&gpio3 19 IRQ_TYPE_LEVEL_LOW>
+			MX8MMN(IOMUXC_SAI5_RXFS_GPIO3_IO19, 0x1c9)
+#define GP_DISABLE_BATT	<&gpio3 24 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI5_RXD3_GPIO3_IO24, 0x06)
+#define GP_SUSPEND	<&gpio5 12 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_ECSPI2_MISO_GPIO5_IO12, 0x06)
 		>;
 	};
 
@@ -94,7 +103,16 @@
 	pinctrl_i2c2_tca9546: i2c2-tca9546grp {
 		fsl,pins = <
 #define GP_I2C2_MUX_RESET	<&gpio5 11 GPIO_ACTIVE_LOW>
-			MX8MMN(IOMUXC_ECSPI2_MOSI_GPIO5_IO11, 0x100)
+			MX8MMN(IOMUXC_ECSPI2_MOSI_GPIO5_IO11, 0x1c3)
+		>;
+	};
+
+	pinctrl_i2c2a_pn7150: i2c2a-pn7150grp {
+		fsl,pins = <
+#define GP_EN_PN7150	<&gpio1 7 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_GPIO1_IO07_GPIO1_IO7, 0x1c2)
+#define GPIRQ_PN7150	<&gpio1 8 IRQ_TYPE_LEVEL_HIGH>
+			MX8MMN(IOMUXC_GPIO1_IO08_GPIO1_IO8, 0x182)
 		>;
 	};
 
@@ -102,6 +120,20 @@
 		fsl,pins = <
 #define GPIRQ_ACCEL	<&gpio3 8 IRQ_TYPE_LEVEL_LOW>
 			MX8MMN(IOMUXC_NAND_DATA02_GPIO3_IO8, 0x82)
+		>;
+	};
+
+	pinctrl_i2c2c_max1726x: i2c2c-max1726xgrp {
+		fsl,pins = <
+#define GPIRQ_MAX1726X	<&gpio5 10 IRQ_TYPE_LEVEL_LOW>
+			MX8MMN(IOMUXC_ECSPI2_SCLK_GPIO5_IO10, 0x1c3)
+		>;
+	};
+
+	pinctrl_i2c2d_max77958: i2c2d-max77958grp {
+		fsl,pins = <
+#define GPIRQ_MAX77958	<&gpio3 5 IRQ_TYPE_LEVEL_LOW>
+			MX8MMN(IOMUXC_NAND_CLE_GPIO3_IO5, 0x1c3)
 		>;
 	};
 
@@ -114,9 +146,9 @@
 
 	pinctrl_i2c3_1: i2c3_1grp {
 		fsl,pins = <
-#define GP_I2C3_SCL	<&gpio5 18 GPIO_ACTIVE_HIGH>
+#define GP_I2C3_SCL	<&gpio5 18 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C3_SCL_GPIO5_IO18, 0x400001c3)
-#define GP_I2C3_SDA	<&gpio5 19 GPIO_ACTIVE_HIGH>
+#define GP_I2C3_SDA	<&gpio5 19 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C3_SDA_GPIO5_IO19, 0x400001c3)
 		>;
 	};
@@ -146,6 +178,15 @@
 		>;
 	};
 
+	pinctrl_i2c3d_adp1650: i2c3d-adp1650grp {
+		fsl,pins = <
+#define GP_FLASH_EN		<&gpio1 10 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_GPIO1_IO10_GPIO1_IO10, 0x1c3)
+#define GP_TORCH_EN		<&gpio1 5 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_GPIO1_IO05_GPIO1_IO5, 0x109)
+		>;
+	};
+
 	pinctrl_i2c4: i2c4grp {
 		fsl,pins = <
 			MX8MMN(IOMUXC_I2C4_SCL_I2C4_SCL, 0x400001c3)
@@ -155,21 +196,10 @@
 
 	pinctrl_i2c4_1: i2c4_1grp {
 		fsl,pins = <
-#define GP_I2C4_SCL	<&gpio5 20 GPIO_ACTIVE_HIGH>
+#define GP_I2C4_SCL	<&gpio5 20 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C4_SCL_GPIO5_IO20, 0x400001c3)
-#define GP_I2C4_SDA	<&gpio5 21 GPIO_ACTIVE_HIGH>
+#define GP_I2C4_SDA	<&gpio5 21 GPIO_OPEN_DRAIN>
 			MX8MMN(IOMUXC_I2C4_SDA_GPIO5_IO21, 0x400001c3)
-		>;
-	};
-
-	pinctrl_max77976: max77976grp {
-		fsl,pins = <
-#define GPIRQ_MAX77	<&gpio3 19 IRQ_TYPE_LEVEL_LOW>
-			MX8MMN(IOMUXC_SAI5_RXFS_GPIO3_IO19, 0x09)
-#define GP_DISABLE_BATT	<&gpio3 24 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI5_RXD3_GPIO3_IO24, 0x06)
-#define GP_SUSPEND	<&gpio5 12 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_ECSPI2_MISO_GPIO5_IO12, 0x06)
 		>;
 	};
 
@@ -250,8 +280,6 @@
 
 	pinctrl_sound_wm8960: sound-wm8960grp {
 		fsl,pins = <
-#define GP_WM8960_MIC_DET		<&gpio3 22 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI5_RXD1_GPIO3_IO22, 0x09)	/* TP31 */
 #define GP_WM8960_HP_DET		<&gpio1 1 GPIO_ACTIVE_HIGH>
 			MX8MMN(IOMUXC_GPIO1_IO01_GPIO1_IO1, 0x80)
 		>;
@@ -292,6 +320,13 @@
 			MX8MMN(IOMUXC_ECSPI1_MOSI_UART3_DCE_TX, 0x140)
 			MX8MMN(IOMUXC_ECSPI1_SS0_UART3_DCE_RTS_B, 0x140)
 			MX8MMN(IOMUXC_ECSPI1_MISO_UART3_DCE_CTS_B, 0x140)
+		>;
+	};
+
+	pinctrl_uart4: uart4grp {
+		fsl,pins = <
+			MX8MMN(IOMUXC_UART4_RXD_UART4_DCE_RX, 0x140)
+			MX8MMN(IOMUXC_UART4_TXD_UART4_DCE_TX, 0x140)
 		>;
 	};
 
@@ -422,26 +457,26 @@
 	pinctrl_wwan_rfkill: wwan-rfkillgrp {
 		fsl,pins = <
 			/* EC21 - Modem pins */
-#define GP_EC21_RESET		<&gpio4 10 GPIO_ACTIVE_LOW>
-			MX8MMN(IOMUXC_SAI1_TXFS_GPIO4_IO10, 0x1c0)
+#define GP_EC21_RESET		<&gpio4 10 (GPIO_OPEN_DRAIN | GPIO_ACTIVE_LOW)>
+			MX8MMN(IOMUXC_SAI1_TXFS_GPIO4_IO10, 0x140)
 #define GP_EC21_USB_BOOT	<&gpio4 11 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXC_GPIO4_IO11 , 0x1c0)
-#define GP_EC21_NET_STAT	<&gpio4 12 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD0_GPIO4_IO12, 0x1c0)
-#define GP_EC21_NET_MODE	<&gpio4 13 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD1_GPIO4_IO13, 0x1c0)
-#define GP_EC21_AP_READY	<&gpio4 14 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD2_GPIO4_IO14, 0x1c0)
-#define GP_EC21_WAKE_UP		<&gpio4 15 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD3_GPIO4_IO15, 0x1c0)
-#define GP_EC21_RI		<&gpio4 16 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD4_GPIO4_IO16, 0x1c0)
-#define GP_EC21_USIM_DETECT	<&gpio4 17 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD5_GPIO4_IO17, 0x1c0)
-#define GP_EC21_POWER_KEY	<&gpio4 18 GPIO_ACTIVE_HIGH>
-			MX8MMN(IOMUXC_SAI1_TXD6_GPIO4_IO18, 0x1c0)
-#define GP_EC21_STAT		<&gpio4 19 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXC_GPIO4_IO11 , 0x100)
+#define GP_EC21_POWER_KEY	<&gpio4 18 GPIO_OPEN_DRAIN>
+			MX8MMN(IOMUXC_SAI1_TXD6_GPIO4_IO18, 0x140)
+#define GP_EC21_USIM_DETECT	<&gpio4 17 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_TXD5_GPIO4_IO17, 0x100)
+#define GP_EC21_WAKE_UP		<&gpio4 15 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_TXD3_GPIO4_IO15, 0x100)
+#define GP_EC21_AP_READY	<&gpio4 14 GPIO_ACTIVE_LOW>
+			MX8MMN(IOMUXC_SAI1_TXD2_GPIO4_IO14, 0x100)
+#define GP_EC21_ACTIVE_STATUS	<&gpio4 19 GPIO_ACTIVE_LOW>
 			MX8MMN(IOMUXC_SAI1_TXD7_GPIO4_IO19, 0x1c0)
+#define GP_EC21_NET_STAT	<&gpio4 12 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXD0_GPIO4_IO12, 0x80)
+#define GP_EC21_NET_MODE	<&gpio4 13 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXD1_GPIO4_IO13, 0x80)
+#define GP_EC21_RI		<&gpio4 16 GPIO_ACTIVE_HIGH>
+			MX8MMN(IOMUXC_SAI1_TXD4_GPIO4_IO16, 0x80)
 		>;
 	};
 
@@ -491,6 +526,31 @@
 		type = <2>; /* Bluetooth */
 		reset-gpios = GP_BT_RFKILL_RESET;
 		status = "okay";
+	};
+
+	connector {
+		compatible = "usb-c-connector";
+		label = "USB-C";
+		data-role = "dual";
+
+		ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				hs_ep: endpoint {
+					remote-endpoint = <&usb_hs_ep>;
+				};
+			};
+
+			port@1 {
+				reg = <1>;
+				ss_ep: endpoint {
+					remote-endpoint = <&max77958_in_ep>;
+				};
+			};
+		};
 	};
 
 	csi_mclk: csi-mclk {
@@ -563,15 +623,21 @@
 		regulator-name = "ec21_3v7";
 		regulator-min-microvolt = <3700000>;
 		regulator-max-microvolt = <3700000>;
+		startup-delay-us = <60000>;
 		gpio = GP_REG_3P7V;
 		enable-active-high;
 	};
 
 	reg_vref_5v: regulator-vref-5v {
 		compatible = "regulator-fixed";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_reg_5v>;
 		regulator-name = "vref-5v";
 		regulator-min-microvolt = <5000000>;
 		regulator-max-microvolt = <5000000>;
+		gpio = GP_REG_5V_EN;
+		enable-active-high;
+		regulator-always-on;
 	};
 
 	reg_wlan_vmmc: regulator-wlan-vmmc {
@@ -600,26 +666,27 @@
 			"Ext Spk", "SPK_LN",
 			"Ext Spk", "SPK_RP",
 			"Ext Spk", "SPK_RN",
-			"LINPUT1", "Main MIC",
-			"Main MIC", "MICB",
-			"RINPUT1", "Mic Jack",
-			"Mic Jack", "MICB";
+			"LINPUT1", "Mic Jack",
+			"Mic Jack", "MICB",
+			"RINPUT1", "Main MIC",
+			"Main MIC", "MICB";
 		/* JD2: hp detect high for headphone*/
 		hp-det = <2 0>;
 		hp-det-gpios = GP_WM8960_HP_DET;
-		/* Jack is not stuffed */
-		mic-det-gpios = GP_WM8960_MIC_DET;
+		mic-det-gpios = GP_WM8960_HP_DET;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_sound_wm8960>;
 	};
 #endif
 
 	wwan_rfkill: wwan-rfkill {
+		active-status-gpios = GP_EC21_ACTIVE_STATUS;
 		compatible = "net,rfkill-gpio";
 #if 1
 		low-gpios = GP_EC21_USB_BOOT;
+		high-gpios = GP_EC21_USIM_DETECT,GP_EC21_WAKE_UP,GP_EC21_AP_READY;
 #else
-		high-gpios = GP_EC21_USB_BOOT;
+		high-gpios = GP_EC21_USB_BOOT,GP_EC21_USIM_DETECT,GP_EC21_WAKE_UP,GP_EC21_AP_READY;
 #endif
 		name = "wwan-rfkill";
 		pinctrl-names = "default";
@@ -754,6 +821,25 @@
 			};
 		};
 	};
+
+	max77975: max77975@6b {
+		compatible = "maxim,max77975";
+		reg = <0x6b>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c1_max77975>;
+		interrupts-extended = GPIRQ_MAX77975;
+		input-voltage-min-microvolt = <4500000>;
+		input-current-limit-microamp = <3200000>;
+		suspend-gpios = GP_SUSPEND;
+		disbatt-gpios = GP_DISABLE_BATT;
+
+		regulators {
+			reg_usbotg_vbus: otg {
+				regulator-min-microvolt = <5000000>;
+				regulator-max-microvolt = <5000000>;
+			};
+		};
+	};
 };
 
 &i2c2 {
@@ -770,36 +856,33 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i2c2_tca9546>;
 		reg = <0x70>;
+		reset-gpios = GP_I2C2_MUX_RESET;
 		status = "okay";
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		i2c2@0 {
-			/* NFC */
+		i2c2a: i2c2@0 {
 			clock-frequency = <100000>;
 			reg = <0>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
 
-		i2c2@1 {
-			/* accelerometer */
+		i2c2b: i2c2@1 {
 			clock-frequency = <100000>;
 			reg = <1>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
 
-		i2c2@2 {
-			/* spare */
+		i2c2c: i2c2@2 {
 			clock-frequency = <100000>;
 			reg = <2>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
 
-		i2c2@3 {
-			/* STUSB4500 */
+		i2c2d: i2c2@3 {
 			clock-frequency = <100000>;
 			reg = <3>;
 			#address-cells = <1>;
@@ -807,6 +890,107 @@
 		};
 	};
 };
+
+&i2c2a {
+	pn7150@28 {
+		compatible = "nxp,pn547";
+		reg = <0x28>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c2a_pn7150>;
+		interrupt-gpios = GPIRQ_PN7150;
+		enable-gpios = GP_EN_PN7150;
+	};
+};
+
+&i2c2b {
+	/* Invensense */
+	icm20948@68 {
+		compatible = "invensense,icm20648";
+		reg = <0x68>;
+		interrupts-extended = GPIRQ_ACCEL;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c2b_icm_20948>;
+		inven,vdd_ana-supply = <&reg_vref_1v8>;
+		inven,vcc_i2c-supply = <&reg_vref_1v8>;
+		fs_range = <0x00>;
+		axis_map_x = <0>;
+		axis_map_y = <1>;
+		axis_map_z = <2>;
+		negate_x = <0>;
+		negate_y = <0>;
+		negate_z = <0>;
+		poll_interval = <200>;
+		min_interval = <5>;
+		inven,secondary_reg = <0x0c>;
+		inven,secondary_type = "compass";
+		inven,secondary_name = "ak09916";
+		inven,secondary_axis_map_x = <0>;
+		inven,secondary_axis_map_y = <1>;
+		inven,secondary_axis_map_z = <2>;
+		inven,secondary_negate_x = <0>;
+		inven,secondary_negate_y = <1>;
+		inven,secondary_negate_z = <1>;
+		inven,aux_type = "none";
+		inven,read_only_slave_type = "none";
+	};
+};
+
+&i2c2c {
+	max1726x@36 {
+		compatible  = "maxim,max1726x";
+		reg = <0x36>;
+		interrupts-extended = GPIRQ_MAX1726X;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c2c_max1726x>;
+		rsense = <10>;         /* milliOhm */
+		model-option = <1>;    /* EZ model */
+		talrt-min = <0>;       /* DegreeC */
+		talrt-max = <65>;      /* DegreeC */
+		valrt-min = <3200>;    /* mV */
+		valrt-max = <4500>;    /* mV */
+		salrt-min = <1>;       /* Percent */
+		salrt-max = <99>;      /* Percent */
+		ialrt-min = <(-5000)>; /* mA */
+		ialrt-max = <5000>;    /* mA */
+		/* EZ model parameters */
+		designcap = /bits/ 16 <0x2260>; /* 8800 mAh */
+		ichgterm = /bits/ 16 <0x0640>;
+		vempty = /bits/ 16 <0x9652>; /* VE: 3000mV VR: 3300mV */
+		vcharge = <4300>; /* mV */
+	};
+};
+
+#if 0
+&i2c2d {
+	max77958@25 {
+		compatible = "max77958";
+		reg = <0x25>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c2d_max77958>;
+		interrupts-extended = GPIRQ_MAX77958;
+		charger-power-supply = <&max77975>;
+
+		ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				max77958_in_ep: endpoint {
+					remote-endpoint = <&ss_ep>;
+				};
+			};
+
+			port@1 {
+				reg = <1>;
+				max77958_out_ep: endpoint {
+					remote-endpoint = <&usb_role_switch>;
+				};
+			};
+		};
+	};
+};
+#endif
 
 &i2c3 {
 	clock-frequency = <100000>;
@@ -818,10 +1002,11 @@
 	status = "okay";
 
 	i2cmux@70 {
-		compatible = "nxp,pca9540";
+		compatible = "nxp,pca9546";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i2c3_tca9546>;
 		reg = <0x70>;
+		reset-gpios = GP_I2C3_MUX_RESET;
 		#address-cells = <1>;
 		#size-cells = <0>;
 
@@ -838,7 +1023,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
-		
+
 		i2c3c: i2c3@2 {
 			/* CSI */
 			reg = <2>;
@@ -848,7 +1033,7 @@
 
 		i2c3d: i2c3@3 {
 			/* Flash */
-			reg = <1>;
+			reg = <3>;
 			#address-cells = <1>;
 			#size-cells = <0>;
 		};
@@ -871,22 +1056,22 @@
 };
 
 #if 0
-&i2c3c {
+&i2c3b {
 	ov5640-mipi1@3c {
-		AVDD-supply = <&reg_vref_2v5>;
+		AVDD-supply = <&reg_ldo3>;
 		DOVDD-supply = <&reg_vref_1v8>;
 		DVDD-supply = <&reg_vref_3v3>;
 		clocks = <&csi_mclk>;
-		clock-names = "csi_mclk";
+		clock-names = "xclk";
 		compatible = "ovti,ov5640_mipisubdev";
 		csi_id = <0>;
 		mclk = <20000000>;
 		mipi_csi;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_i2c3c_ov5640_mipi>;
-		pwn-gpios = GP_OV5640_2MIPI_POWER_DOWN;
+		pinctrl-0 = <&pinctrl_i2c3b_ov5640_mipi>;
+		powerdown-gpios = GP_OV5640_1MIPI_POWER_DOWN;
 		reg = <0x3c>;
-		rst-gpios = GP_OV5640_2MIPI_RESET;
+		reset-gpios = GP_OV5640_1MIPI_RESET;
 		status = "okay";
 
 		port {
@@ -894,6 +1079,43 @@
 				remote-endpoint = <&mipi1_ov5640_ep>;
 			};
 		};
+	};
+};
+
+&i2c3c {
+	ov5640-mipi2@3c {
+		AVDD-supply = <&reg_ldo3>;
+		DOVDD-supply = <&reg_vref_1v8>;
+		DVDD-supply = <&reg_vref_3v3>;
+		clocks = <&csi_mclk>;
+		clock-names = "xclk";
+		compatible = "ovti,ov5640_mipisubdev";
+		csi_id = <0>;
+		mclk = <20000000>;
+		mipi_csi;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c3c_ov5640_mipi>;
+		powerdown-gpios = GP_OV5640_2MIPI_POWER_DOWN;
+		reg = <0x3c>;
+		reset-gpios = GP_OV5640_2MIPI_RESET;
+		status = "disabled";
+
+		port {
+			ov5640_mipi2_ep: endpoint {
+				remote-endpoint = <&mipi2_ov5640_ep>;
+			};
+		};
+	};
+};
+
+&i2c3d {
+	adp1650@30 {
+		compatible = "adi,adp1650";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c3d_adp1650>;
+		reg = <0x30>;
+		enable-gpios = GP_FLASH_EN;
+		torch-gpios = GP_TORCH_EN;
 	};
 };
 #endif
@@ -939,6 +1161,14 @@
 		csi1_mipi_ep: endpoint@2 {
 			remote-endpoint = <&csi1_ep>;
 		};
+
+		mipi2_ov5640_ep: endpoint@3 {
+			remote-endpoint = <&ov5640_mipi2_ep>;
+			data-lanes = <2>;
+			csis-hs-settle = <13>;
+			csis-clk-settle = <2>;
+			csis-wclk;
+		};
 	};
 };
 #endif
@@ -959,7 +1189,7 @@
 	status = "okay";
 
 	fb_mipi: panel@0 {
-		backlight= <&backlight_mipi>;
+		backlight = <&backlight_mipi>;
 		bits-per-color = <8>;
 		bits-per-pixel = <24>;
 		bridge-de-active = <0>;
@@ -1076,6 +1306,10 @@
 	pinctrl-0 = <&pinctrl_sai3>;
 	status = "okay";
 };
+
+&snvs_pwrkey {
+	status = "okay";
+};
 #endif
 
 &uart2 { /* console */
@@ -1092,7 +1326,15 @@
 	pinctrl-0 = <&pinctrl_uart3>;
 	assigned-clocks = <&clk IMX8MMN(CLK_UART3)>;
 	assigned-clock-parents = <&clk IMX8MMN(SYS_PLL1_80M)>;
-	fsl,uart-has-rtscts;
+	uart-has-rtscts;
+	status = "okay";
+};
+
+&uart4 { /* scanner */
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart4>;
+	assigned-clocks = <&clk IMX8MMN(CLK_UART4)>;
+	assigned-clock-parents = <&clk IMX8MMN(CLK_24M)>;
 	status = "okay";
 };
 #endif
@@ -1143,12 +1385,14 @@
 #if 0
 &usdhc3 {
 	bus-width = <4>;
+	keep-power-in-suspend;
 	no-sd-uhs-sdr104;
 	non-removable;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc3>;
 	pinctrl-1 = <&pinctrl_usdhc3_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc3_200mhz>;
+	pm-ignore-notify;
 	status = "okay";
 	vmmc-supply = <&reg_wlan_vmmc>;
 	vqmmc-1-8-v;
